# cmake_rpi_pico

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
project/: CMakeLists.txt  openocd.cfg  openocd_reset.cfg
project/cmake/: dependencies.cmake
project/rpi_xmodem/: ReadMe.md  blink.c  blink_led.c
